<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Power+</string>
    <string name="action_settings">Settings</string>
    <string name="new_outage_activity">New Outage Activity</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="closed_drawer">Closed Drawer</string>
    <string name="hide">Hide</string>
    <string name="full_name">Full Name</string>
    <string name="name_here">Name Here</string>
    <string name="email">Email</string>
    <string name="email_here">Email Here</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="_optional_">(Optional)</string>
    <string name="report_outage">Report Outage</string>
    <string name="get_location">Get Location</string>

</resources>
